fix strange row spacing in quote header

--- a/wp-content/themes/modern-journalist/sass/pages/_posts.scss
+++ b/wp-content/themes/modern-journalist/sass/pages/_posts.scss
@@ -233,6 +233,11 @@
     //Quote Header
     #quote-header {
         width: 100%;
+
+        &> .row {
+            margin: -8px;
+        }
+
         #header-bg {
             background-size: cover; //height: 100vw;
             background-position: top left;
